# WiFiGuard

./: README.md  pubspec.yaml
android/app/src/main/: AndroidManifest.xml
ios/Runner/Assets.xcassets/LaunchImage.imageset/: README.md
lib/: main.dart
lib/screens/dashboard/: dashboard.dart
lib/widgets/: tile_builder.dart
test/: widget_test.dart
web/: index.html
wifiguard_flutter/: .gitignore  flutter_launcher_icons.yaml  pubspec.yaml
wifiguard_flutter/android/: build.gradle  gradle.properties  settings.gradle
wifiguard_flutter/android/app/: build.gradle
wifiguard_flutter/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
wifiguard_flutter/assets/: scan.py
wifiguard_flutter/ios/Runner.xcodeproj/: project.pbxproj
wifiguard_flutter/lib/: main.dart
wifiguard_flutter/lib/screens/ai/: help_AI.dart
wifiguard_flutter/lib/screens/connected_devices/: ask_AI.dart  connected_devices.dart  (+2 more)
wifiguard_flutter/lib/services/: connected_devices_service.dart  gemini_service.dart  network_info_service.dart  network_security_score_service.dart  nmap_scan_service.dart  nmap_service.dart  notification_service.dart  permission_handler.dart  wifi_monitor_service.dart
wifiguard_flutter/lib/widgets/: Network_info_builder.dart  connected_devices_builder.dart  dashboard_builder.dart  device_details_builder.dart  help_and_guidance_builder.dart  network_info_builder.dart  network_security_builder.dart  settings_builder.dart  tile_builder.dart  universal_tile_builder.dart
wifiguard_flutter/test/: widget_test.dart
wifiguard_flutter/web/: manifest.json
(+29 files in other folders)
